# task-manager

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/core/: config.py  security.py
app/crud/: task.py  user.py
app/db/: database.py
app/dependencies/: auth.py  database.py
app/models/: task.py  user.py
app/routers/: auth.py  tasks.py  users.py
app/schemas/: task.py  token.py  user.py
app/services/: auth.py
tests/: conftest.py  test_auth.py  test_security.py  test_tasks.py  test_users.py
