[project]
name = "task-manager"
version = "0.1.0"
description = "A simple task manager API built with FastAPI"
requires-python = ">= 3.10"

dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pwdlib[argon2]>=0.2.0",
    "pyjwt>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "isort>=5.0.0",
]

[tool.fastapi]
entrypoint = "app.main:app"